update: project architecture and definitions